--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
-layout: splash
+layout: home
 author_profile: true
 header:
-  image: "/assets/images/plitvice.jpg"
+  overlay_image: "/assets/images/plitvice.jpg"
 ---
