--- a/index.html
+++ b/index.html
@@ -4,3 +4,4 @@ author_profile: true
 header:
   overlay_image: "/assets/images/plitvice_full.jpg"
 ---
+<link rel="shortcut icon" type="image/x-icon" href="{{site.url}}{{site.baseurl}}/assets/images/favicon-code.ico">
